package PS;
// import "proto/neural_network.proto";
// import "linear_method/proto/lm.proto";
// import "graph_partition/proto/gp.proto";
// import "factor_machine/proto/fm.proto";
// import "cxxnet/proto/cxxnet.proto";

message AppConfig {
  optional string app_name = 1 [default = "app"];
  // repeated string parameter_name = 2;
  // optional LM.Config linear_method = 3;
  // optional GP.Config graph_partition = 5;
  // optional FM.Config factor_machine = 6;
  // optional CXXNET.Config cxxnet = 7;

  extensions 100 to 199;
}
